<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/summary_score_preferences"
        android:title="@string/title_score_preferences" >
        <ListPreference
            android:defaultValue="0"
            android:key="@string/loss_mode_key"
            android:entries="@array/loss_score_entries_list"
            android:entryValues="@array/loss_score_values_list"
            android:title="@string/title_loss_mode" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/win_score_entries_list"
            android:entryValues="@array/win_score_values_list"
            android:key="@string/win_mode_key"
            android:summary="@string/preference_win_score_summary"
            android:title="@string/preference_win_score" />
    </PreferenceCategory>

</PreferenceScreen>