<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip">
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:padding="10dip">
    	
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_annouce" 
        android:layout_weight="1"/>
<TextView android:id="@+id/announce_reminder"
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:gravity="right"
		android:layout_height="wrap_content" />
</LinearLayout>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/to_fail"
    android:textSize="15dip"
    android:color="@color/grey" />

      <View android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:background="?android:attr/listDivider" />
<LinearLayout
    android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/without_trumps" />

        <TextView
            android:id="@+id/no_oudler_lose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1" />
    </LinearLayout>
  <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />
  <LinearLayout
      android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/with_trumps" />

        <TextView
            android:id="@+id/all_oudler_lose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />

    </LinearLayout>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/to_win"
    android:textSize="15dip"
    android:color="@color/grey" />
	
	      <View android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:background="?android:attr/listDivider" />
    	
<LinearLayout
    android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/without_trumps" />

        <TextView
            android:id="@+id/no_oudler_win"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />

    </LinearLayout>
  <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />
  <LinearLayout
      android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/with_trumps" />

        <TextView
            android:id="@+id/all_oudler_win"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />

    </LinearLayout>

	<include layout="@layout/score_difference" />
	
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.5"
            android:text="@string/win" />

        <Button
            android:id="@+id/button_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:text="@string/lost" />
    </LinearLayout>
</LinearLayout>
